# ujwalkingpin

./: .gitignore  .replit  DATA_RETENTION_SUMMARY.md  DOCUMENTATION.md  ELECTRON_BUILD_GUIDE.md  GOOGLE_OAUTH_SETUP.md  NEON_6_DATABASE_SETUP.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_ENVIRONMENT_SETUP.md  REPLIT_DATABASE_SETUP.md  SECURITY.md  TAURI_BUILD_GUIDE.md  TIMEZONE_FIX.md  WEBVIEW2_BUILD_GUIDE.md  WHATSAPP_SETUP.md  design_guidelines.md  electron-builder.json  package-lock.json  package.json  replit.md  tailwind.config.ts  vite.config.ts
attached_assets/: Login_1765121988329.tsx  Pasted--69-20-kB-dist-assets-WhatsApp-Image-2025-10-22-at-11-12-35-f-1764597576061_1764597576061.txt  Pasted--Copyright-C-Microsoft-Corporation-All-rights-reserved-Install-the-latest-PowerShell-for-new-fe-1764410385573_1764410385573.txt  Pasted--Exited-with-status-1-Common-ways-to-troubleshoot-your-deploy-https-render-com-docs-troubl-1759778092622_1759778092623.txt  Pasted--Prompt-for-Replit-AI-Build-a-local-admin-panel-webapp-for-a-gaming-center-POS-system-The-app-sh-1759282899670_1759282899670.txt  Pasted--Uploaded-in-5-5s-Compression-took-3-4s-Build-successful-Deploying-Running-npm-1759910439000_1759910439000.txt  Pasted--opt-render-project-src-node-modules-pg-pool-index-js-45-Error-captureStackTrace-err--1759911625719_1759911625719.txt  Pasted--src-lib-tauri-db-ts-Consolidated-Tauri-local-DB-adapte_1764780866971.txt  (+15 more)
client/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt
src-tauri/src/: lib.rs
(+146 files in other folders)
