[package]
name = "airavoto-gaming-pos"
version = "1.0.0"
description = "Airavoto Gaming Lounge Management POS - Desktop Application"
authors = ["Airavoto Gaming"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.17"
rusqlite = { version = "0.33", features = ["bundled"] }
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
opt-level = "s"
strip = true
